--- a/styles/base/utilities.css
+++ b/styles/base/utilities.css
@@ -9,6 +9,7 @@
 .row {
   flex-direction: row;
 }
+
 .justify-center {
   justify-content: center;
 }
@@ -16,6 +17,16 @@
 .align-center {
   align-items: center;
 }
+
 .space-between {
   justify-content: space-between;
+}
+
+.full-viewport {
+  width: 100vw;
+  height: 100vh;
+}
+
+.overflow-hidden {
+  overflow: hidden;
 }
