--- a/styles/base/mainMenu.css
+++ b/styles/base/mainMenu.css
@@ -1,14 +1,106 @@
-body {
-  height: 100%;
-  font-family: "Rubik", sans-serif;
+input {
+  transform: scale(1.5);
+  margin-bottom: 25px;
 }
 
-.img-container {
-  padding: 10px;
-}
-
-.img-container img {
+.items {
   width: 100%;
-  height: 100%;
-  object-fit: cover;
+  height: 30%;
+}
+
+.padding-mM {
+  padding: 1.3%;
+}
+
+.title-size {
+  font-size: 80px;
+}
+
+.sub-title-size {
+  font-size: 45px;
+}
+
+.car-imgs-container {
+  transform: scale(1.9);
+  gap: 25px;
+}
+
+.car-imgs-container > button {
+  transform: rotate(270deg);
+}
+
+.play-bttn {
+  margin-top: 25px;
+  font-size: 25px;
+}
+
+/*.shadow-titles {
+  font-size: 80px;
+  z-index: -1;
+  padding-bottom: 0%;
+}
+
+.sub-shadow-titles1 {
+  font-size: 45px;
+  z-index: -1;
+  padding-top: 0%;
+}*/
+
+@media (max-width: 350px) {
+  .title-size {
+    font-size: 25px;
+  }
+
+  .sub-title-size {
+    font-size: 19px;
+  }
+
+  input {
+    width: 100px;
+    font-size: 8.5px;
+    transform: scale(1.5);
+  }
+
+  .car-imgs-container {
+    flex-direction: column;
+    transform: scale(1);
+    gap: 5px;
+  }
+}
+
+@media (min-width: 350px) and (max-width: 500px) {
+  .title-size {
+    font-size: 35px;
+  }
+
+  .sub-title-size {
+    font-size: 25px;
+  }
+
+  input {
+    width: 115px;
+    font-size: 8.5px;
+    transform: scale(1.8);
+  }
+
+  .car-imgs-container {
+    transform: scale(1.5);
+    gap: 15px;
+  }
+}
+
+@media (min-width: 500px) and (max-width: 750px) {
+  .title-size {
+    font-size: 45px;
+  }
+
+  .sub-title-size {
+    font-size: 32px;
+  }
+
+  input {
+    width: 115px;
+    font-size: 8.5px;
+    transform: scale(1.8);
+  }
 }
