Adjusted some styles

--- a/styles/base/mainMenu.css
+++ b/styles/base/mainMenu.css
@@ -25,13 +25,11 @@ input {
   gap: 25px;
 }
 
-.car-imgs-container > button {
-  transform: rotate(270deg);
-}
-
 .play-container {
+  margin-top: 45px;
   gap: 10px;
 }
+
 .play-container > button {
   font-size: 25px;
 }
