--- a/styles/base/mainMenu.css
+++ b/styles/base/mainMenu.css
@@ -3,6 +3,10 @@ input {
   margin-bottom: 25px;
 }
 
+button:hover {
+  background-color: black;
+}
+
 .items {
   width: 100%;
   height: 30%;
@@ -37,18 +41,6 @@ input {
 .play-container > button > img {
   margin-top: 5px;
 }
-
-/*.shadow-titles {
-  font-size: 80px;
-  z-index: -1;
-  padding-bottom: 0%;
-}
-
-.sub-shadow-titles1 {
-  font-size: 45px;
-  z-index: -1;
-  padding-top: 0%;
-}*/
 
 @media (max-width: 350px) {
   .title-size {
