--- a/styles/base/utilities.css
+++ b/styles/base/utilities.css
@@ -18,10 +18,17 @@
   align-items: center;
 }
 
+.align-start {
+  align-items: start;
+}
+
 .space-between {
   justify-content: space-between;
 }
 
+.space-around {
+  justify-content: space-around;
+}
 .space-evenly {
   justify-content: space-evenly;
 }
