--- a/styles/home.css
+++ b/styles/home.css
@@ -46,3 +46,41 @@
 .game-play-title p {
   font-size: 80px;
 }
+.car-section {
+  background-image: url("./../assets/images/maze-parallax.png");
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+}
+.car-section > div {
+  width: 76vw;
+  height: 65vh;
+}
+.car-section > div img {
+  rotate: -90deg;
+  width: 100%;
+  height: 100%;
+}
+.car-section p {
+  text-transform: capitalize;
+  padding: 20px 0;
+  text-align: center;
+  font-size: 40px;
+}
+.car-cards {
+  width: 100%;
+  padding: 0 71px;
+}
+.car-cards > div {
+  width: 15.5vw;
+  height: 38vh;
+  border-radius: 10px;
+  margin-bottom: 60px;
+}
+.car-cards > div > div {
+  min-width: 100px;
+  min-height: 70px;
+  margin: 82px 52px;
+}
