--- a/styles/styles.css
+++ b/styles/styles.css
@@ -58,3 +58,98 @@
     color: #333;
     line-height: 1.6;
 }
+footer {
+    background-color: #333;
+    color: #fff;
+    padding: 2em;
+    text-align: center;
+}
+
+.footer-content {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: flex-start;
+}
+
+.footer-credits, .footer-links, .social-media, .footer-info {
+    flex: 1 1 200px;
+    margin: 10px;
+}
+
+.footer-credits h3, .footer-links h3, .social-media h3, .footer-info h3 {
+    font-size: 1.5em;
+    color: white;
+    margin-bottom: 0.5em;
+    text-decoration: solid;
+}
+
+
+.creators {
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+    margin: 10px;
+    }
+
+.creator-link {
+    color: var(--secondary-color);
+    text-decoration: none;
+    font-weight: bold;
+    background-color: #444;
+    padding: 5px 10px;
+    border-radius: 8px;
+    transition: background-color 0.3s ease;
+}
+
+.creator-link:hover {
+    background-color: var(--primary-color);
+    color: #fff;
+}
+
+
+.social-media a {
+    margin: 5px;
+    display: inline-block;
+    transition: transform 0.2s ease-in-out;
+}
+
+.social-media img {
+    width: 30px;
+    height: 30px;
+    
+}
+
+.social-media a:hover img {
+    filter: brightness(0.7) invert(1);
+    transform: scale(1.1);
+}
+
+
+.footer-links a {
+    color: var(--secondary-color);
+    text-decoration: none;
+    display: block;
+    margin: 5px 0;
+    transition: color 0.3s ease;
+}
+
+.footer-links a:hover {
+    color: var(--primary-color);
+}
+
+
+.footer-info p {
+    color: var(--secondary-color);
+    line-height: 1.6;
+    max-width: 300px;
+    margin: auto;
+}
+
+
+@media (max-width: 768px) {
+    .footer-content {
+        flex-direction: column;
+        text-align: center;
+    }
+}
