--- a/styles/home.css
+++ b/styles/home.css
@@ -312,6 +312,37 @@ footer {
     flex-direction: column;
     text-align: center;
   }
+  .car-section > div {
+    height: 50vh;
+    justify-content: center;
+  }
+
+  .car-section p {
+    font-size: 38px;
+  }
+  .car-cards {
+    width: 100%;
+    padding: 0 50px;
+  }
+  .car-cards > div {
+    width: 15vw;
+    height: 18vh;
+    border-radius: 10px;
+    margin-bottom: 60px;
+  }
+  .car-cards > div > div {
+    min-width: 70px;
+    min-height: 70px;
+    margin: 82px 52px;
+  }
+  .maze1 {
+    flex-direction: column;
+    align-items: center;
+  }
+  .maze2 {
+    flex-direction: column-reverse;
+    align-items: center;
+  }
 }
 
 @media (min-width: 561px) and (max-width: 770px) {
@@ -344,6 +375,37 @@ footer {
   .footer-content {
     flex-direction: column;
     text-align: center;
+  }
+  .car-section > div {
+    height: 50vh;
+    justify-content: center;
+  }
+
+  .car-section p {
+    font-size: 38px;
+  }
+  .car-cards {
+    width: 100%;
+    padding: 0 50px;
+  }
+  .car-cards > div {
+    width: 15vw;
+    height: 18vh;
+    border-radius: 10px;
+    margin-bottom: 60px;
+  }
+  .car-cards > div > div {
+    min-width: 70px;
+    min-height: 70px;
+    margin: 82px 52px;
+  }
+  .maze1 {
+    flex-direction: column;
+    align-items: center;
+  }
+  .maze2 {
+    flex-direction: column-reverse;
+    align-items: center;
   }
 }
 
