--- a/styles/home.css
+++ b/styles/home.css
@@ -9,7 +9,7 @@
   font-size: 28px;
 }
 .navbar > p {
-  text-shadow: 2px 2px 4px #ffffff6e;
+  text-shadow: 2px 2px 4px #ffffff58;
 }
 
 .hero-section {
@@ -51,6 +51,7 @@
   font-size: 80px;
   text-shadow: 2px 2px 4px #7e0b95;
 }
+
 .car-section {
   background-image: url("./../assets/images/maze-parallax.png");
   background-attachment: fixed;
@@ -62,6 +63,7 @@
 .car-section > div {
   width: 76vw;
   height: 65vh;
+  border-radius: 15px;
 }
 .car-section > div img,
 .maze-img-left img,
@@ -77,7 +79,7 @@
   text-transform: uppercase;
   padding: 20px 0;
   text-align: center;
-  font-size: 40px;
+  font-size: 60px;
   width: 100%;
   height: 100%;
 }
